Some lint fixes.