@@ -62,7 +62,7 @@ public class MainActivity extends ActionBarActivity {
         // automatically handle clicks on the Home/Up button, so long
         // as you specify a parent activity in AndroidManifest.xml.
         int id = item.getItemId();
-        Log.v(TAG, new Integer(id).toString());
+        Log.v(TAG, Integer.valueOf(id).toString());
         //noinspection SimplifiableIfStatement
         if (id == R.id.action_settings) {
             return true;
